FOF 3.3.4
================================================================================
# [MEDIUM] DataController's defaultsForAdd didn't do anything

FOF 3.3.3
================================================================================
# [HIGH] DateDecorator did not work properly with add(), sub() and modify()

FOF 3.3.2
================================================================================
+ Encryption service in the container
+ PHP Generator support in DataModel for easily iterating very large datasets under PHP 5.5 or later
# [MEDIUM] Using getUser() under CLI could cause a problem if no user ID was passed

FOF 3.3.1
================================================================================
+ Support for precompiled Blade templates for broken hosts without PHP Tokenizer support.
~ Improve detection of stream wrapper registration capability
# [HIGH] Scaffolding does not work on PHP 7.2 (see changelog for version 3.1.4 for related issue)
# [HIGH] Blade templates don't work at all when your cache folders are not writable
# [LOW] FEF-based components have the wrong padding in the backend due to extra classes being added to the container

FOF 3.3.0
================================================================================
+ JHtml helpers for browse and edit views to help us convert from XML forms to FEF
+ BrowseView helper to help us convert from XML forms to FEF
+ Blade: `@sortgrid($field [, $langKey])` implements Joomla sortable titles for browse view table headers
+ Blade: `@fieldtitle($field)` returns the translated COM_YourComponent_YourView_FIELD_YourField string
+ SelectOptions helper for getting JHtml option arrays for Joomla core information, such as access levels
+ Additional options for the FEF renderer
# [MEDIUM] DataModel constructor forcibly applies access level filtering when the model is doing asset tracking

FOF 3.2.1
================================================================================